--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@farcaster/frame-sdk": "^0.0.31",
     "@privy-io/react-auth": "^2.6.2",
     "@privy-io/wagmi": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.68.0",
     "@types/socket.io-client": "^3.0.0",
