--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "ts-node server.ts"
+    "server": "ts-node server.ts",
+    "server-dev": "tsx watch server.ts"
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.31",
@@ -17,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.68.0",
     "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
@@ -27,6 +29,8 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.3",
+    "uuid": "^9.0.1",
     "viem": "^2.23.12",
     "wagmi": "^2.14.15"
   },
